--- a/styles/light.css
+++ b/styles/light.css
@@ -3,14 +3,36 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
-:root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+.theme-light .page {
+    --back-image: url("/images/cover-image-light.png");
+    --text-back: #FF8DCB;
+    --text-color: #353430;
+    --title-color: #FFC2E6;
+    --title-text-color: #353430;
+    --focus-title: #353430;
+    --rec-border: #353430;
+    --header-button-hover: rgba(50, 49, 45, 0.40);
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+    :root.theme-light {
+        --back-image: url("/images/cover-image-light.png");
+        --text-back: #FF8DCB;
+        --text-color: #353430;
+        --title-color: #FFC2E6;
+        --title-text-color: #353430;
+        --focus-title: #353430;
+        --rec-border: #353430;
+
+        --header-button-hover: rgba(50, 49, 45, 0.40);
+    }
+}
+
+.header__rec {
+    display: none;
+}
+
+
+.header__rec {
+    display: none;
 }
