--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,5 +7,5 @@
   --padding-mobile: 10px;
   --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --font-size-title-mob: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  --font-familytext: IBM Plex Mono,'OpenSans', sans-serif;
+  --font-familytext: 'IBM Plex Mono','OpenSans', sans-serif;
 }
