--- a/styles/light.css
+++ b/styles/light.css
@@ -15,7 +15,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-    :root.theme-light {
+    :root {
         --back-image: url("/images/cover-image-light.png");
         --text-back: #FF8DCB;
         --text-color: #353430;
@@ -28,7 +28,12 @@
 }
 
 
+@media (prefers-color-scheme: light) {
+	.theme-auto .header__rec {
+		visibility: hidden;
+	}
+}
+
 .theme-light .header__rec {
-     display: none;
-     
+	visibility: hidden;
 }
