--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+
+
 }
 
 /* Шапка */
