--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,6 +15,10 @@
   --rec-text: #FF0070;
 
   --header-button-hover: rgba(255, 0, 112, 0.40);
+ 
+}
+
+:root .page {
   --padding: 20px;
   --padding-mobile: 10px;
   --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -22,4 +26,3 @@
   --font-familytext: 'IBM Plex Mono','OpenSans', sans-serif;
 
 }
-
