--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,4 @@
-/* тменая тема */
+
 :root {
   --back-image: url("/images/cover-image-dark.png");
   --text-back: #FF0070;
@@ -15,7 +15,8 @@
   --rec-text: #FF0070;
 
   --header-button-hover: rgba(255, 0, 112, 0.40);
- 
+  --dark-theme: #000028;
+  
 }
 
 :root .page {
