--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,7 +15,7 @@
   --rec-text: #FF0070;
 
   --header-button-hover: rgba(255, 0, 112, 0.40);
-  --dark-theme: #000028;
+  --back-color:#000028;
   
 }
 
