--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,7 +13,8 @@
         --title-text-color: #000028;
         --focus-title: #FF0070;
         --rec-border: #FF0070;
-        --dark-theme: #000028;
+        --back-color:#000028;
+        
   
       
         --rec-radius-border: 1px solid #FF0070;
