--- a/styles/light.css
+++ b/styles/light.css
@@ -3,7 +3,7 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root.theme-light .page{
+:root.theme-light {
     --back-image: url("/images/cover-image-light.png");
     --text-back: #FF8DCB;
     --text-color: #353430;
@@ -12,12 +12,14 @@
     --focus-title: #353430;
     --rec-border: #353430;
     --header-button-hover: rgba(50, 49, 45, 0.40);
+    --back-color:#FFF1F7;
+
    
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        --back-image: url("/images/cover-image-light.png");
+        --back-image: url("/images/cover-image-light.pnsg");
         --text-back: #FF8DCB;
         --text-color: #353430;
         --title-color: #FFC2E6;
@@ -25,6 +27,7 @@
         --focus-title: #353430;
         --rec-border: #353430;
         --header-button-hover: rgba(50, 49, 45, 0.40);
+        --back-color:#FFF1F7;
         
     }
 }
