--- a/styles/light.css
+++ b/styles/light.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 :root.theme-light {
-    --back-image: url("/images/cover-image-light.png");
+    --back-image: url("../images/cover-image-light.png");
     --text-back: #FF8DCB;
     --text-color: #353430;
     --title-color: #FFC2E6;
@@ -19,7 +19,7 @@
 
 @media (prefers-color-scheme: light) {
     :root {
-        --back-image: url("/images/cover-image-light.pnsg");
+        --back-image: url("../images/cover-image-light.png");
         --text-back: #FF8DCB;
         --text-color: #353430;
         --title-color: #FFC2E6;
