--- a/styles/style.css
+++ b/styles/style.css
@@ -281,6 +281,7 @@
   gap: 20px;
   justify-content: space-between;
   padding: var(--padding);
+  margin-block-end: 60px;
 }
 
 @media (width <=425px) {
