--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,8 @@
 @media (width <=425px) {
   .header {
     padding: var(--padding-mobile);
-    margin-block-end: 30px;
+    margin-block-end: 20px;
+    max-height: 668px;
   }
 }
 
@@ -202,11 +203,11 @@
 @media (width <=425px) {
   .decorated-zone::after {
     left: 10px;
-    bottom: 10px;
+    bottom: 12px;
   }
 
   .decorated-zone::before {
-    top: 10px;
+    top: 9px;
     right: 10px;
   }
 }
@@ -288,6 +289,8 @@
   .focus-tips__cards {
     flex-direction: column;
     padding: var(--padding-mobile);
+    margin-block-start: 29px;
+    margin-block-end: 0px;
   }
 }
 
@@ -361,8 +364,8 @@
 
 @media (width <=425px) {
   .card {
-    margin-block-start: 40px;
-    margin-block-end: 40px;
+    margin-block-start: 41px;
+    margin-block-end: 42px;
     padding-right: var(--padding-mobile);
     padding-left: var(--padding-mobile);
   }
@@ -452,5 +455,6 @@
 @media (width <=425px) {
   .footer {
     padding: var(--padding-mobile);
+    max-block-size: 97vh;
   }
 }
