--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,6 +14,8 @@
   --focus-title: #FF0070;
   --rec-border: #FF0070;
   --back-color: #000028;
+  --focus-active:#FF0070;
+  --default-outline:#FF0070;
 
 
 
