--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,27 @@
   padding-top: var(--padding);
   padding-right: var(--padding);
   padding-bottom: var(--padding);
+  min-block-size: 768px;
+  
+}
+
+@media (width <=1023px) {
+  .header {
+    min-block-size: 768px;
+    block-size: 100vh;
+    
+    
+  }
 }
 
 @media (width <=767px) {
   .header {
     padding: var(--padding-mobile);
     margin-block-end: 20px;
-    max-height: 668px;
+    min-block-size: 668px;
+    block-size: auto;
+    
+    
   }
 }
 
@@ -176,7 +190,7 @@
 }
 
 .decorated-zone {
-  height: max(100vh, 768px);
+
 }
 
 .decorated-zone::after {
@@ -410,7 +424,7 @@
   grid-row: 3/5;
 }
 
-.card__item_iceCream {
+.card__item_icecream {
   grid-column: 3/3;
   grid-row: 1/3;
 }
@@ -435,6 +449,8 @@
   display: flex;
   position: relative;
   justify-content: center;
+  min-block-size: 768px;
+  
 }
 
 .footer__title {
@@ -454,10 +470,19 @@
   }
 }
 
+@media (width <=1023px) {
+  .footer {
+    min-block-size: 768px;
+    block-size: 100vh;
+   
+  }
+}
+
 @media (width <=767px) {
   .footer {
     padding: var(--padding-mobile);
-    max-block-size: 97vh;
+    min-block-size: 668px;
+    block-size: auto;
   }
 }
 
