--- a/styles/light.css
+++ b/styles/light.css
@@ -28,6 +28,7 @@
         --rec-border: #353430;
         --header-button-hover: rgba(50, 49, 45, 0.40);
         --back-color: #FFF1F7;
+        --focus-active: #353430;
 
     }
 
